# powerplant-coding-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
tests/: test_main.py
